# recipes_manager

./: .gitignore  Cargo.toml  Rocket.toml
src/: database.rs  ingredient_list_manager.rs  main.rs  main.scss  models.rs  recipes_printer.rs  recipes_routes.rs  temp_fridge_routes.rs
templates/: add_recipe.html.tera  allergen_ingredient.html.tera  base.html.tera  index.html.tera  ingredient.html.tera  ingredients_list.html.tera  preparation_step.html.tera  recipes.html.tera
templates/recipes/: add_recipe.html.tera  ingredient.html.tera  macros.html.tera  preparation_step.html.tera  recipes.html.tera
templates/temp_fridge/: temp_fridge.html.tera
