[package]
name = "recipes_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.4", features = ["json"] }
surrealdb = "1.1.1"
tectonic = "0.15.0"

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.4"
features = ["tera"]
